force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <description>Used by Sales to Submit Expense Reports</description>
    <label>Sales Expense Report</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>