force-app/main/default/objects/Expense_Report__c/fields/Account_6__c.field-meta.xml
<CustomField>
    <fullName>Account_6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 6</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Expense_Reports5</relationshipName>
    <type>Lookup</type>
</CustomField>