force-app/main/default/objects/Expense_Report__c/fields/ADP_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>ADP_Record_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ADP Record Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>