force-app/main/default/objects/Expense_Report__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <displayFormat>SF{000000}</displayFormat>
    <label>Expense Report Number</label>
    <type>AutoNumber</type>
</CustomField>