force-app/main/default/objects/Expense_Report__c/fields/ExpenseReportPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseReportPaidAmount__c</fullName>
    <description>Amount that the submitter was paid for this expense report</description>
    <inlineHelpText>Amount that the submitter was paid for this expense report</inlineHelpText>
    <label>Expense Report Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>