force-app/main/default/objects/Expense_Report__c/fields/lod_status__c.field-meta.xml
<CustomField>
    <fullName>lod_status__c</fullName>
    <label>Status (LOD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reimbursed</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>