force-app/main/default/objects/Expense_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>