force-app/main/default/objects/Expense_Report__c/fields/To_Finance_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Finance_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Finance Date</label>
    <type>DateTime</type>
</CustomField>