force-app/main/default/objects/Expense_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Report__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Final_Approver__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>ExpenseReportPaidAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>