force-app/main/default/objects/Expense_Report__c/listViews/All_with_ID.listView-meta.xml
<ListView>
    <fullName>All_with_ID</fullName>
    <columns>Expense_Report__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Final_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All With ID</label>
</ListView>