force-app/main/default/objects/Expense_Report__c/listViews/AP_Sales_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>AP_Sales_Expense_Reports</fullName>
    <columns>Expense_Report__c</columns>
    <columns>NAME</columns>
    <columns>Final_Approver__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>To_Finance_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Final_Approver__c</field>
        <operation>equals</operation>
        <value>Steve Stearns,Tim Guo,Rose Say,Steven Lee,Juliet Chiam</value>
    </filters>
    <label>AP Sales Expense Reports</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>