force-app/main/default/objects/Expense_Report__c/listViews/Approved_Last_Modified_7_Days.listView-meta.xml
<ListView>
    <fullName>Approved_Last_Modified_7_Days</fullName>
    <columns>NAME</columns>
    <columns>ADP_Record_Number__c</columns>
    <columns>Expense_Report__c</columns>
    <columns>Final_Approver__c</columns>
    <columns>Status__c</columns>
    <columns>To_Finance_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Approved Last Modified &lt; 7 Days</label>
    <sharedTo>
        <group>NISFDCSysAdmin</group>
    </sharedTo>
</ListView>