force-app/main/default/objects/Expense_Report__c/listViews/My_Sales_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>My_Sales_Expense_Reports</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Expense_Report__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>To_Finance_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Expense Reports</label>
</ListView>